--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 body{
     display: flex;
     justify-content: center;
-
 }
 
 p{
@@ -26,6 +25,9 @@ p{
     width: 550px;
     height: 550px;
     background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
  }
 
@@ -48,7 +50,7 @@ p{
     height: 40px;
     font-weight: 800;
     font-size: 40px;
-    margin: 0;
+    margin-bottom: 5px;
     color: white;
 }
 
@@ -67,7 +69,23 @@ p{
     margin: 10px 0;
 }
 
-button{
+.sel{
+    background-color:  #10B981;
+   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.05);
+   border-radius: 6px; 
+   border: none;
+   height: 42px;
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 500;
+   font-size: 15px;
+   line-height: 24px;
+   color: white;
+   margin-top: 51px;
+
+}
+
+#gbtn{
    background-color:  #10B981;
    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.05);
    border-radius: 6px; 
@@ -75,13 +93,19 @@ button{
    width: 191px;
    height: 42px;
    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    color: white;
-    margin-top: 51px;
+   font-style: normal;
+   font-weight: 500;
+   font-size: 15px;
+   line-height: 24px;
+   color: white;
+   margin-top: 51px;
 }
+
+
+
+/* #gbtn:hover{
+    background-color: #fff;;
+} */
 
 .password-btn{
     display: flex;
@@ -93,4 +117,40 @@ button{
     width: 211px;
     height: 39px;
     background-color: #273549;
+    font-size: 14px;
+    color: wheat;
+    border: none;
+}
+
+.sizeBtn{
+    display: flex;
+    flex-direction: row;
+    column-gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.sizeBtn button{
+    width: 140px;
+    height: 20px;
+
+}
+
+.lengthBtn {
+    color: rebeccapurple;
+    background-color:#273549;
+    color: wheat;
+    border: none;
+}
+
+.lengthBtn:hover{
+    background-color: teal;
+}
+
+.selections{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 48px;
 }
